<?xml version="1.0"?>
<package format="2">
  <name>map_to_baselink</name>
  <version>0.1.0</version>
  <description>The map_to_baselink package</description>
  
  <maintainer email="530925206@qq.com">fantasyplus</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nmea_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>


</package>
