<package format="2">
  <name>car_gazebo</name>
  <version>1.0.0</version>
  <description>gazebo package</description>

  <author>fantasyplus</author>
  <maintainer email="530925206@qq.com" />
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>gazebo</depend>

</package>